ch19/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world-httproute
spec:
  parentRefs:
    - name: hello-world-gateway
  hostnames:
    - "hello-world.exposed"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: web
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
